Bug 1664803 - Add temporary suppression. r=Gankro

Depends on D93507

Differential Revision: https://phabricator.services.mozilla.com/D93508