mozglue/build/TsanOptions.cpp
@@ -216,6 +216,9 @@ extern "C" const char* __tsan_default_suppressions() {
          "race:setNeedsIncrementalBarrier\n"
          "race:needsIncrementalBarrier\n"
 
+         // Bug 1664803
+         "race:Sampler::sSigHandlerCoordinator\n"
+
          // ~GLContextGLX unlocks a libGL mutex that cannot be seen
          // by TSan because libGL is not instrumented.
          "mutex:GLContextGLX::~GLContextGLX\n"
